add reset button

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <div class="container bg-white rounded-3 p-3 mt-3">
         <div class="row mt-5 text-center">
             <div class="col">
-                <div class="color_button">Nome e Congome</div>
+                <div class="color_button fw-bold">Nome e Congome</div>
                 <input class="form-control mt-3 nome_cognome border_pink" type="text" aria-label="default input example">
             </div>
             <div class="col">
-                <div class="color_button">Km da percorrere</div>
+                <div class="color_button fw-bold">Km da percorrere</div>
                 <input class="form-control mt-3 km border_pink" type="text" aria-label="default input example">
             </div>
             <div class="col">
-                <div class="color_button">Fascia d'età</div>
+                <div class="color_button fw-bold">Fascia d'età</div>
                 <div class="input-group mt-3 età border_pink">
                     
                     <select class="form-select lista" id="inputGroupSelect01">
@@ -35,39 +35,39 @@
             </div>
             <div class="row d-flex justify-content-center">
                 <div class="col-1 mt-3">
-                    <button type="button" class="btn btn-secondary bg_button genera color_button">Genera</button>
+                    <button type="button" class="btn btn-secondary bg_button genera color_button fw-bold">Genera</button>
                 </div>
                 <div class="col-1 mt-3">
-                    <button type="button" class="btn btn-secondary bg_button color_button">Annulla</button>
+                    <button type="button" class="btn btn-secondary bg_button color_button fw-bold reset">Annulla</button>
                 </div>
             </div>
         </div>
     </div>
 
     <h2 class="text-center mt-5 text-white">Il tuo biglietto</h2>
-    <div class="container bg-white p-3">
+    <div class="container bg-white p-3 size">
         <div class="row">
             <h4>Dettagli Passeggeri</h4>
             <hr>
-            <div class="col bg-secondary">
-                <div>Nome passeggero</div>
-                <div class="valoreNome"></div>
+            <div class="col bg_passeggero">
+                <div class="fw-bold">Nome passeggero</div>
+                <div class="valoreNome fst-italic fs-4"></div>
             </div>
             <div class="col">
-                <div>Offerta</div>
-                <div class="sconto"></div>
+                <div class="fw-bold">Offerta</div>
+                <div class="sconto fst-italic fs-4"></div>
             </div>
             <div class="col">
-                <div>Carrozza</div>
-                <div class="carrozzaNumber"></div>
+                <div class="fw-bold">Carrozza</div>
+                <div class="carrozzaNumber fst-italic fs-4"></div>
             </div>
             <div class="col">
-                <div>Codice CP</div>
-                <div class="codiceCp"></div>
+                <div class="fw-bold">Codice CP</div>
+                <div class="codiceCp fst-italic fs-4"></div>
             </div>
             <div class="col">
-                <div>Costo biglietto</div>
-                <div class="prezzo"></div>
+                <div class="fw-bold">Costo biglietto</div>
+                <div class="prezzo fst-italic fs-4"></div>
             </div>
             <hr>
         </div>
