--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <select class="form-select lista" id="inputGroupSelect01">
                       <option selected>Choose...</option>
                       <option>Minore</option>
-                      <option>Maggiore</option>
+                      <option>Maggiorenne</option>
                       <option>Over 65</option>
                     </select>
                     <div class="chilometri"></div>
